# cmake-template

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
man/: doc.1
runners/: cmake-template.bat  cmake-template.ps1  cmake-template.sh
src/: main.ts
template/: CMakeLists.txt
template/dependencies/: .gitignore
template/src/$PROJECT_NAME/: CMakeLists.txt
template/src/$PROJECT_NAME/src/: main.cpp
